- Fleshed out Social Media/Contact section. - Added another div for social media content. - Began building out a form. May have to create another div float purely to align items to the left. - Future plans: Add favicon, finish page content, finalize the styling of page content, and work with the media queries to make sure page looks okay when zooming in and out.

--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -83,8 +83,6 @@ h1 {
 
 .float {
     display: inline-grid;
-    /* justify-content: center;
-    align-items: center; */
     width: 40%;
     float: left;
     padding: 20px;
@@ -114,7 +112,6 @@ h1 {
 /* Paragraph float with No Border */
 .float2 {
     position: relative;
-    /* display: inline-grid; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -132,7 +129,6 @@ h1 {
 /* For the coffee, tea, and cookie floats */
 .float3 {
     position: relative;
-    /* display: flex; */
     justify-content: center;
     align-items: center;
     width: 40%;
@@ -148,16 +144,15 @@ h1 {
     text-align: center;
 }
 
-/* Section */
-.section {
-    height: 30%;
+/* Float for Social Media/Contact Info */
+.float4 {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
     width: 100%;
     float: left;
-    padding: 20px;
-    padding-top: 15px;
+    margin-right: 60px;
     text-align: center;
-    justify-content: center;
-    font-size: 1.5rem;
 }
 
 body {
@@ -169,6 +164,16 @@ body {
 h2 {
     text-align: center;
 }
+
+/* CSS Code for Form */
+.wrapper {
+    padding: 5px 20px;
+}
+
+.wrapper fieldset {
+    margin: 20px 0;
+}
+
 
 @media only screen and (max-width: 1024px){
     header .nav-btn {
@@ -209,8 +214,8 @@ h2 {
     footer {
         position: fixed;
         background-color: var(--mainColor);
-        height: 100%;
-        width: 100%;
+        height: 5%;
+        width: 5%;
         bottom: 0;
         left: 0;
         right: 0;
